refactor: rename framework to Fractal Resonance Coherence in content

--- a/content/en/papers/FRC-100-001.md
+++ b/content/en/papers/FRC-100-001.md
@@ -1,12 +1,12 @@
 ---
-title: "Fractal Resonance Cognition: A Framework for Complex Systems Analysis"
+title: "Fractal Resonance Coherence: A Framework for Complex Systems Analysis"
 id: FRC-100-001
 series: "FRC 100"
 author: "Hadi Servat"
 date: 2025-03-23
 status: published
 tags: [framework, complex-systems, quantum-chaos, fractal-resonance, operator-formalism]
-abstract: "Introduces Fractal Resonance Cognition (FRC), a theoretical framework for analyzing complex systems across quantum physics, biology, and cosmology. FRC proposes that complex systems are governed by vortex-like attractor structures with fractal scaling and resonant dynamics."
+abstract: "Introduces Fractal Resonance Coherence (FRC), a theoretical framework for analyzing complex systems across quantum physics, biology, and cosmology. FRC proposes that complex systems are governed by vortex-like attractor structures with fractal scaling and resonant dynamics."
 lang: en
 doi: "10.5281/zenodo.15073056"
 license: "CC BY-NC-ND 4.0"
@@ -22,19 +22,19 @@ rating:
   best: 5
 ---
 
-# FRC 100.001 — Fractal Resonance Cognition: A Framework for Complex Systems Analysis
+# FRC 100.001 — Fractal Resonance Coherence: A Framework for Complex Systems Analysis
 
 ## 1. Introduction
 
 Complex systems—ranging from quantum chaotic systems to biological networks and cosmological structures—often exhibit behaviors that appear random or unpredictable. Traditional approaches, such as random matrix theory (RMT) in quantum physics or statistical mechanics in thermodynamics, rely on stochastic models to describe emergent phenomena. While effective, these models frequently overlook the possibility that apparent randomness may stem from deterministic, structured dynamics operating at fractal scales.
 
-We propose Fractal Resonance Cognition (FRC), a novel theoretical framework that reinterprets complexity through the lens of self-similar, resonant dynamics. FRC posits that complex systems are governed by vortex-like attractor structures exhibiting fractal scaling, which manifest as resonant patterns in spatial, spectral, or temporal domains.
+We propose Fractal Resonance Coherence (FRC), a novel theoretical framework that reinterprets complexity through the lens of self-similar, resonant dynamics. FRC posits that complex systems are governed by vortex-like attractor structures exhibiting fractal scaling, which manifest as resonant patterns in spatial, spectral, or temporal domains.
 
 The core hypothesis of FRC is that fractal resonance—deterministic interactions between self-similar structures—serves as a fundamental organizing principle across scales and disciplines.
 
 ### 1.1 The Role of "Cognition" in FRC
 
-The term "Cognition" in Fractal Resonance Cognition is used metaphorically to describe the complex information processing inherent in systems exhibiting fractal resonance. Just as cognitive systems process information through interconnected, hierarchical structures, FRC proposes that complex systems process "information" via self-similar, resonant dynamics.
+The term "Cognition" in Fractal Resonance Coherence is used metaphorically to describe the complex information processing inherent in systems exhibiting fractal resonance. Just as cognitive systems process information through interconnected, hierarchical structures, FRC proposes that complex systems process "information" via self-similar, resonant dynamics.
 
 ## 2. Theoretical Framework
 
@@ -125,7 +125,7 @@ FRC offers a unified perspective on complexity by emphasizing fractal resonance 
 
 ## 5. Conclusion
 
-Fractal Resonance Cognition provides a novel framework for analyzing complex systems, positing that vortex-like attractor structures with fractal scaling and resonant dynamics underlie their behavior. Through the FRC operator, we formalize fractal resonance and demonstrate self-similar resonant modes.
+Fractal Resonance Coherence provides a novel framework for analyzing complex systems, positing that vortex-like attractor structures with fractal scaling and resonant dynamics underlie their behavior. Through the FRC operator, we formalize fractal resonance and demonstrate self-similar resonant modes.
 
 ## Connections
 
