--- a/content/en/papers/FRC-100-002.md
+++ b/content/en/papers/FRC-100-002.md
@@ -1,5 +1,5 @@
 ---
-title: "Fractal Resonance Cognition in Quantum Chaos: Nodal Patterns in the Stadium Billiard"
+title: "Fractal Resonance Coherence in Quantum Chaos: Nodal Patterns in the Stadium Billiard"
 id: FRC-100-002
 series: "FRC 100"
 author: "Hadi Servat"
