--- a/content/en/papers/FRC-100-010.md
+++ b/content/en/papers/FRC-100-010.md
@@ -1,5 +1,5 @@
 ---
-title: "Foundational Questions in Fractal Resonance Cognition"
+title: "Foundational Questions in Fractal Resonance Coherence"
 id: FRC-100-010
 series: "FRC 100"
 author: "Hadi Servat"
