refactor: complete renaming to Fractal Resonance Coherence across site and sources

--- a/content/en/papers/FRC-100-001.md
+++ b/content/en/papers/FRC-100-001.md
@@ -32,9 +32,9 @@ We propose Fractal Resonance Coherence (FRC), a novel theoretical framework that
 
 The core hypothesis of FRC is that fractal resonance—deterministic interactions between self-similar structures—serves as a fundamental organizing principle across scales and disciplines.
 
-### 1.1 The Role of "Cognition" in FRC
+### 1.1 The Role of "Coherence" in FRC
 
-The term "Cognition" in Fractal Resonance Coherence is used metaphorically to describe the complex information processing inherent in systems exhibiting fractal resonance. Just as cognitive systems process information through interconnected, hierarchical structures, FRC proposes that complex systems process "information" via self-similar, resonant dynamics.
+The term "Coherence" in Fractal Resonance Coherence describes the phase alignment and information preservation inherent in systems exhibiting fractal resonance. Just as cognitive systems process information through interconnected structures, FRC proposes that complex systems maintain "coherence" via self-similar, resonant dynamics.
 
 ## 2. Theoretical Framework
 
