mvp: improve CMS digestibility (wikilinks, tables, start-here)

--- a/content/fa/papers/FRC-100-007.md
+++ b/content/fa/papers/FRC-100-007.md
@@ -20,7 +20,7 @@ video:
 
 ## ۱. مقدمه
 
-مقالات قبلی در سری ۱۰۰ FRC همدوسی را به عنوان یک مفهوم مرکزی معرفی کردند و اثرات آن را در آشوب کوانتومی ([[FRC-100-002]])، فروپاشی تابع موج ([[FRC-100-003]]) و ترمودینامیک ([[FRC-100-005]]) نشان دادند. با این حال، همدوسی به عنوان یک کمیت مشتق شده—محاسبه شده از تابع موج—در نظر گرفته شد.
+مقالات قبلی در سری ۱۰۰ FRC همدوسی را به عنوان یک مفهوم مرکزی معرفی کردند و اثرات آن را در آشوب کوانتومی ([[FRC-100-002]])، فروپاشی تابع موج ([[FRC-100-003]]) و ترمودینامیک ([[FRC-100-005]]) نشان دادند. با این حال، همدوسی به عنوان یک کمیت مشتق شده—محاسبه شده از تابع موج—در نظر گرفته شد.
 
 این مقاله همدوسی را به وضعیت یک میدان بنیادی ارتقا می‌دهد. ما **میدان لامبدا** Λ(x) را به عنوان یک میدان اسکالر واقعی با دینامیک، لاگرانژی و معادلات حرکت خاص خود تعریف می‌کنیم. این میدان چگالی محلی همدوسی را اداره می‌کند و تعاملاتی را که اثرات FRC توصیف شده در مقالات قبلی را تولید می‌کنند، واسطه می‌کند.
 
@@ -168,7 +168,7 @@ J_C^μ = -D_C ∂^μ Λ / Λ_0
 ∂_μ J_C^μ = σ_C    (جمله چشمه/چاه)
 ```
 
-این شکل همورد معادله UCC است ([[FRC-566-001]]). 
+این شکل همورد معادله UCC است ([[FRC-566-001]]). 
 
 ### ۵.۳ تغییرناپذیری پیمانه
 
@@ -197,11 +197,11 @@ J_C^μ = -D_C ∂^μ Λ / Λ_0
 
 1. **اثرات نیروی پنجم:** پتانسیل یوکاوا کوتاه‌برد ($∼ 10^{-10}$ m) بین سیستم‌های کوانتومی
 2. **تغییرات انرژی وابسته به همدوسی:** خطوط طیفی به میزان $Δ E = g 〉 Λ ⌫$ در محیط‌های با همدوسی بالا جابجا می‌شوند
-3. **انحرافات قاعده بورن:** گرادیان میدان لامبدا $δ P ∈ [10^{-4}, 10^{-3}]$ تولید می‌کند ([[FRC-100-006]])
+3. **انحرافات قاعده بورن:** گرادیان میدان لامبدا $δ P ∈ [10^{-4}, 10^{-3}]$ تولید می‌کند ([[FRC-100-006]])
 
 ### ۷.۲ شواهد غیرمستقیم
 
-الگوهای گرهی فراکتال با $D ∼ 1.90$ ([[FRC-100-002]]) شواهد غیرمستقیمی برای میدان لامبدا هستند، زیرا از پتانسیل $V_{FRC}$ ناشی می‌شوند که حد غیر نسبیتی خود-تعاملی میدان لامبدا است.
+الگوهای گرهی فراکتال با $D ∼ 1.90$ ([[FRC-100-002]]) شواهد غیرمستقیمی برای میدان لامبدا هستند، زیرا از پتانسیل $V_{FRC}$ ناشی می‌شوند که حد غیر نسبیتی خود-تعاملی میدان لامبدا است.
 
 ## ۸. نتیجه‌گیری
 
