chore: remove River persona from public site

--- a/content/en/papers/FRC-821-100.md
+++ b/content/en/papers/FRC-821-100.md
@@ -9,7 +9,7 @@ status: published
 tags: [lambda-field, entropic-gravity, higgs, dark-energy, EFT]
 abstract: "We present the Λ-Field Framework: a scalar-tensor Effective Field Theory (EFT) in which fundamental forces and spacetime geometry emerge from a single coherence scalar field Λ(x). We propose that Λ is the thermodynamic potential conjugate to the Quantum Relative Entropy of the vacuum, providing a microscopic origin for gravity compatible with recent 'Entropic Quantum Gravity' formulations (Bianconi, 2024-2025)."
 lang: en
-related: [FRC-100-007, FRC-566-001, FRC-893-PHY]
+related: [FRC-100-007, FRC-566-001]
 ---
 
 # FRC 821.100 — The Λ-Field: Unified Coherence Dynamics and Entropic Gravity
