--- a/content/es/papers/FRC-821-100.md
+++ b/content/es/papers/FRC-821-100.md
@@ -9,7 +9,7 @@ status: published
 tags: [lambda-field, entropic-gravity, higgs, dark-energy, EFT]
 abstract: "Presentamos el Marco del Campo Λ: una Teoría de Campo Efectiva (EFT) escalar-tensorial en la que las fuerzas fundamentales y la geometría del espacio-tiempo emergen de un único campo escalar de coherencia Λ(x). Proponemos que Λ es el potencial termodinámico conjugado a la Entropía Relativa Cuántica del vacío, proporcionando un origen microscópico para la gravedad compatible con las recientes formulaciones de 'Gravedad Cuántica Entrópica' (Bianconi, 2024-2025)."
 lang: es
-related: [FRC-100-007, FRC-566-001, FRC-893-PHY]
+related: [FRC-100-007, FRC-566-001]
 ---
 
 # FRC 821.100 — El Campo Λ: Dinámica de Coherencia Unificada y Gravedad Entrópica
