--- a/content/fa/papers/FRC-821-100.md
+++ b/content/fa/papers/FRC-821-100.md
@@ -9,7 +9,7 @@ status: published
 tags: [lambda-field, entropic-gravity, higgs, dark-energy, EFT]
 abstract: "ما چارچوب میدان لاندا را معرفی می‌کنیم: یک نظریه میدان موثر (EFT) اسکالر-تانسور که در آن نیروهای بنیادی و هندسه فضازمان از یک میدان اسکالر همدوسی واحد Λ(x) پدید می‌آیند. ما پیشنهاد می‌کنیم که Λ پتانسیل ترمودینامیکی مزدوج با آنتروپی نسبی کوانتومی خلاء است که منشأ میکروسکوپی برای گرانش فراهم می‌کند که با فرمول‌بندی‌های اخیر «گرانش کوانتومی آنتروپیک» (بیانکونی، ۲۰۲۴-۲۰۲۵) سازگار است."
 lang: fa
-related: [FRC-100-007, FRC-566-001, FRC-893-PHY]
+related: [FRC-100-007, FRC-566-001]
 ---
 
 # FRC 821.100 — میدان لاندا: دینامیک همدوسی یکپارچه و گرانش آنتروپیک
