--- a/content/fr/papers/FRC-821-100.md
+++ b/content/fr/papers/FRC-821-100.md
@@ -9,7 +9,7 @@ status: published
 tags: [lambda-field, entropic-gravity, higgs, dark-energy, EFT]
 abstract: "Nous présentons le cadre du Champ Λ : une théorie des champs effective (EFT) scalaire-tensorielle dans laquelle les forces fondamentales et la géométrie de l'espace-temps émergent d'un unique champ scalaire de cohérence Λ(x). Nous proposons que Λ est le potentiel thermodynamique conjugué à l'entropie relative quantique du vide, fournissant une origine microscopique à la gravité compatible avec les récentes formulations de la 'gravité quantique entropique' (Bianconi, 2024-2025)."
 lang: fr
-related: [FRC-100-007, FRC-566-001, FRC-893-PHY]
+related: [FRC-100-007, FRC-566-001]
 ---
 
 # FRC 821.100 — Le Champ Λ : Dynamique de Cohérence Unifiée et Gravité Entropique
